<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp" >

        <ImageView
            android:id="@+id/record_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:cropToPadding="true"
            android:background="@android:color/darker_gray"
            android:src="@android:drawable/ic_menu_camera" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/record_title_label" />

            <EditText
                android:id="@+id/record_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|bottom"
                android:padding="8dp"
                android:lines="1"
                android:hint="@string/record_title_hint" />

        </LinearLayout>

    </LinearLayout>

    <EditText
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="5"
        android:padding="8dp"
        android:gravity="start|top"
        android:includeFontPadding="false"
        android:lineSpacingMultiplier="1.2"
        android:hint="@string/record_details_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp">

        <Button
            android:id="@+id/record_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/record_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/record_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_solved_label" />

    <Button
        android:id="@+id/record_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_suspect_text"/>

    <Button
        android:id="@+id/record_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_report_text" />

</LinearLayout>